--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
 			<version>4.9.0-0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.openpnp</groupId>
+			<artifactId>opencv</artifactId>
+			<version>4.5.5-1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
