--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Event_Management
 spring.datasource.url=jdbc:h2:mem:event_Management;DB_CLOSE_ON_EXIT=FALSE
 logging.level.org.springframework=DEBUG
-#logging.level.org.thymeleaf=DEBUG
+logging.level.org.thymeleaf=DEBUG
 #spring.thymeleaf.cache=false
 #spring.thymeleaf.mode=HTML5
 
